--- a/roles/collect_config/tasks/main.yml
+++ b/roles/collect_config/tasks/main.yml
@@ -19,13 +19,14 @@
   when: collect_ocp
   with_dict: "{{ services }}"
 
-- name: Fetch TripleO configs
-  synchronize:
-    src: "{{ working_dir }}/{{ tripleo_collect_dir }}"
-    dest: "{{ local_working_dir }}"
-    mode: pull
-    use_ssh_args: yes
-  when: collect_podman
+# TODO fails here:
+# - name: Fetch TripleO configs
+#   synchronize:
+#     src: "{{ working_dir }}/{{ tripleo_collect_dir }}"
+#     dest: "{{ local_working_dir }}"
+#     mode: pull
+#     use_ssh_args: yes
+#   when: collect_podman
 
 - name: Fetch CRC configs
   synchronize:
